# controlplane/controlplane/datastore/types/vmliveness.py
@@ -1,6 +1,8 @@
 import datetime
 from pydantic import BaseModel
+from typing import Optional
 
+from sqlalchemy import BigInteger
 from sqlalchemy.orm import Mapped, mapped_column
 from sqlalchemy.dialects.postgresql import TIMESTAMP
 from controlplane.datastore.types.base import DatastoreBaseORM
@@ -17,10 +19,10 @@ class VmHeartbeatORM(DatastoreBaseORM):
     )
     num_cpus: Mapped[int] = mapped_column(nullable=False)
     cpu_description: Mapped[str] = mapped_column(nullable=False)
-    host_memory: Mapped[int] = mapped_column(nullable=False)
+    host_memory_mb: Mapped[int] = mapped_column(BigInteger, nullable=False)
     num_gpus: Mapped[int] = mapped_column(nullable=False)
-    gpu_type: Mapped[str] = mapped_column(nullable=False)
-    gpu_memory: Mapped[int] = mapped_column(nullable=False)
+    gpu_type: Mapped[str] = mapped_column(nullable=True)
+    gpu_memory_mb: Mapped[int] = mapped_column(BigInteger, nullable=True)
     hostname: Mapped[str] = mapped_column(nullable=False)
 
 
@@ -35,10 +37,10 @@ class VmHeartbeat(BaseModel):
     registration_ts: datetime.datetime
     num_cpus: int
     cpu_description: str
-    host_memory: int
+    host_memory_mb: int
     num_gpus: int
-    gpu_type: str
-    gpu_memory: int
+    gpu_type: Optional[str]
+    gpu_memory_mb: Optional[int]
     hostname: str
 
     @classmethod
@@ -49,10 +51,10 @@ class VmHeartbeat(BaseModel):
             registration_ts=orm.registration_ts,
             num_cpus=orm.num_cpus,
             cpu_description=orm.cpu_description,
-            host_memory=orm.host_memory,
+            host_memory_mb=orm.host_memory_mb,
             num_gpus=orm.num_gpus,
             gpu_type=orm.gpu_type,
-            gpu_memory=orm.gpu_memory,
+            gpu_memory_mb=orm.gpu_memory_mb,
             hostname=orm.hostname,
         )
 
@@ -63,40 +65,39 @@ class VmHeartbeat(BaseModel):
             registration_ts=self.registration_ts,
             num_cpus=self.num_cpus,
             cpu_description=self.cpu_description,
-            host_memory=self.host_memory,
+            host_memory_mb=self.host_memory,
             num_gpus=self.num_gpus,
             gpu_type=self.gpu_type,
-            gpu_memory=self.gpu_memory,
+            gpu_memory_mb=self.gpu_memory,
             hostname=self.hostname,
         )
 
 
-class VmRegistration(BaseModel):
+class VmRegistrationInfo(BaseModel):
     """
     Information about a VM to register with the control plane.
 
     Same as VM heartbeat, but without the timestamps because those are automatically set server-side.
     """
 
-    vm_id: str
     num_cpus: int
     cpu_description: str
-    host_memory: int
+    host_memory_mb: int
     num_gpus: int
-    gpu_type: str
-    gpu_memory: int
+    gpu_type: Optional[str]
+    gpu_memory_mb: Optional[int]
     hostname: str
 
-    def to_heartbeat_orm(self) -> VmHeartbeatORM:
+    def to_heartbeat_orm(self, vm_id: str) -> VmHeartbeatORM:
         return VmHeartbeatORM(
-            vm_id=self.vm_id,
+            vm_id=vm_id,
             last_heartbeat_ts=datetime.datetime.now(datetime.timezone.utc),
             registration_ts=datetime.datetime.now(datetime.timezone.utc),
             num_cpus=self.num_cpus,
             cpu_description=self.cpu_description,
-            host_memory=self.host_memory,
+            host_memory_mb=self.host_memory_mb,
             num_gpus=self.num_gpus,
             gpu_type=self.gpu_type,
-            gpu_memory=self.gpu_memory,
+            gpu_memory_mb=self.gpu_memory_mb,
             hostname=self.hostname,
         )
